Fixed widget wrapping on larger screens.

--- a/system/pyrocms/modules/widgets/css/widgets.css
+++ b/system/pyrocms/modules/widgets/css/widgets.css
@@ -9,7 +9,7 @@
 	z-index: 1;
 	float: left;
 	margin: 10px;
-	width: 165px;
+	width: 22.5%;
 	min-height: 110px;
 	box-shadow: #DDD 2px 5px 5px;
 	-webkit-box-shadow: #DDD 2px 5px 5px;
